Fixade fuktion för att lägga till saker i listan och port-krock

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kom ihåg att göra!</title>       
+    <title>Kom ihåg-appen!</title>       
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Dom här grejerna alltså:</h1>
+    <h1>Hallå, kom ihåg att göra dom här grejerna (Girl, u messy):</h1>
     <ul>
         {% for todo in todos %}
             <li>{{ todo }}</li>
