--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <li>
             {{ todo }}
             <form action="/delete/{{ loop.index0 }}" method="post" style="display:inline;">
-                <button type="submit" class="delete-btn">Klar! ✅</button>
+                <button type="submit" class="delete-btn">✔ DONE</button>
             </form>
         </li>
     {% endfor %}
